--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
                     </div>
 
                     <!-- Main Dashboard Layout -->
-                    <div class="flex h-[600px] text-slate-300 font-sans">
+                    <div class="flex h-[600px] text-slate-300 font-sans overflow-hidden">
                         
                         <!-- Sidebar (Dark Navy) -->
-                        <div class="w-64 bg-[#0B1120] border-r border-white/5 flex flex-col hidden md:flex">
+                        <div class="w-64 bg-[#0B1120] border-r border-white/5 flex flex-col hidden md:flex shrink-0">
                             <div class="p-5 flex items-center gap-3">
                                 <div class="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center shadow-lg shadow-blue-900/50">
                                     <i data-lucide="plane-takeoff" class="text-white w-5 h-5"></i>
@@ -303,7 +303,7 @@
                                 </div>
                             </div>
                             
-                            <div class="flex-1 px-3 py-4 space-y-1">
+                            <div class="flex-1 px-3 py-4 space-y-1 overflow-y-auto">
                                 <!-- Nav Item Active -->
                                 <div class="flex items-center gap-3 px-3 py-2.5 rounded-lg bg-blue-600 text-white shadow-md shadow-blue-900/20">
                                     <i data-lucide="layout-dashboard" class="w-4 h-4"></i>
@@ -348,9 +348,9 @@
                         </div>
 
                         <!-- Main Content (Dark/Glass) -->
-                        <div class="flex-1 bg-[#0F172A] p-8 overflow-hidden relative">
+                        <div class="flex-1 bg-[#0F172A] p-4 md:p-8 overflow-y-auto relative w-full">
                             <!-- Header Row -->
-                            <div class="flex justify-between items-start mb-8">
+                            <div class="flex flex-col md:flex-row justify-between items-start mb-8 gap-4">
                                 <div>
                                     <h2 class="text-2xl font-bold text-white mb-1">Daily Operations<br>Dashboard</h2>
                                 </div>
@@ -364,9 +364,9 @@
                             </div>
 
                             <!-- Flight Board Bar -->
-                            <div class="bg-white rounded-xl p-2 flex justify-between items-center mb-6 shadow-sm">
-                                <div class="bg-slate-100 px-4 py-1.5 rounded-lg text-xs font-bold text-slate-800 shadow-sm">Flight Board</div>
-                                <div class="flex items-center gap-3 px-4">
+                            <div class="bg-white rounded-xl p-2 flex flex-col md:flex-row justify-between items-center mb-6 shadow-sm gap-2">
+                                <div class="bg-slate-100 px-4 py-1.5 rounded-lg text-xs font-bold text-slate-800 shadow-sm w-full md:w-auto text-center">Flight Board</div>
+                                <div class="flex items-center justify-center gap-3 px-4 w-full md:w-auto">
                                     <i data-lucide="chevron-left" class="w-4 h-4 text-slate-400"></i>
                                     <div class="flex items-center gap-2 text-xs font-bold text-slate-600">
                                         <i data-lucide="calendar" class="w-3 h-3 text-blue-500"></i> Wed, Dec 3
@@ -376,7 +376,7 @@
                             </div>
 
                             <!-- Stats Cards -->
-                            <div class="grid grid-cols-4 gap-4 mb-8">
+                            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
                                 <!-- Card 1 -->
                                 <div class="bg-white rounded-xl p-4 shadow-sm border-l-4 border-blue-500">
                                     <div class="flex justify-between items-start mb-2">
@@ -421,11 +421,11 @@
                             </div>
 
                             <!-- Live Schedule Table -->
-                            <div class="bg-white rounded-xl shadow-sm border border-slate-100 overflow-hidden">
+                            <div class="bg-white rounded-xl shadow-sm border border-slate-100 overflow-x-auto">
                                 <div class="px-5 py-3 border-b border-slate-100">
                                     <h3 class="font-bold text-slate-800 text-sm">Live Schedule</h3>
                                 </div>
-                                <div class="p-0">
+                                <div class="p-0 min-w-[800px]">
                                     <div class="grid grid-cols-12 gap-4 px-5 py-2 bg-slate-50 text-[10px] font-bold text-slate-400 uppercase tracking-wider border-b border-slate-100">
                                         <div class="col-span-2">Flight #</div>
                                         <div class="col-span-2">Route</div>
